tests/paczka1/fuzzy1/24542418.err
Error in line 8: 70d83 S468 80,8
Error in line 7: TdxQoiFOXz A844 64,5
Error in line 19: S468 A593 45,6
Error in line 30: 70d83 A593 88,0
Error in line 33: TdxQoiFOXz S468 20,8
Error in line 32: 70d83 S468 25,1
Error in line 29: S468 S468 67,6
Error in line 39: S468 A593 14,8
